wip: minimal testing with testify implemented
